# parprog1

./: matrix_mult  mul_matrix.cpp
gen_matrix/: generate.py
gen_matrix/10/: a_matrix.txt  b_matrix.txt
gen_matrix/100/: a_matrix.txt  b_matrix.txt
gen_matrix/1000/: a_matrix.txt  b_matrix.txt
gen_matrix/200/: a_matrix.txt  b_matrix.txt
gen_matrix/300/: a_matrix.txt  b_matrix.txt
gen_matrix/400/: a_matrix.txt  b_matrix.txt
gen_matrix/500/: a_matrix.txt  b_matrix.txt
gen_matrix/600/: a_matrix.txt  b_matrix.txt
gen_matrix/700/: a_matrix.txt  b_matrix.txt
gen_matrix/800/: a_matrix.txt  b_matrix.txt
gen_matrix/900/: a_matrix.txt  b_matrix.txt
lab1/: stat.ipynb
lab1/results/: 200.txt
lab2/: mul_matrix.cpp  stat.ipynb
lab2/results/1/: 300.txt  400.txt  500.txt
lab2/results/8/: 100.txt
lab3/: CMakeLists.txt  stat.ipynb
lab3/results/4/: 600.txt
lab3/src/: main.cpp
